Bug 587418 - Don't let invisible windows from other applications block our mouse events. r=josh a=josh